[gd_scene load_steps=7 format=3 uid="uid://dhurauq3rbwsc"]

[ext_resource type="Script" uid="uid://cwrjcdhivp6o1" path="res://Objects/destructable_sign.gd" id="1_egdn7"]
[ext_resource type="Texture2D" uid="uid://bwjgjk84nbeei" path="res://Sprites/signs/long_arrowSign.png" id="2_3f8aq"]
[ext_resource type="AudioStream" uid="uid://bu7um2p6lj37" path="res://Sounds/sign_hit.ogg" id="3_3f8aq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s010x"]
margin = 0.01
size = Vector3(1.8, 1.57, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_3f8aq"]
margin = 0.01
size = Vector3(0.899707, 1.57, 0.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_egdn7"]
size = Vector3(1.9, 1.67, 0.36)

[node name="destructable_sign" type="RigidBody3D"]
collision_layer = 64
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_egdn7")
signSprite = "uid://bwjgjk84nbeei"

[node name="spriteL" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.5, 0, 0)
offset = Vector2(-25, 0)
texture = ExtResource("2_3f8aq")
region_enabled = true
region_rect = Rect2(0, 0, 250, 500)

[node name="bend" type="Node3D" parent="."]

[node name="spriteR" type="Sprite3D" parent="bend"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, 0, 0)
sorting_offset = -0.1
offset = Vector2(25, 0)
texture = ExtResource("2_3f8aq")
region_enabled = true
region_rect = Rect2(250, 0, 250, 500)

[node name="collisionFlat" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_s010x")
disabled = true

[node name="collisionBend1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.450146, 0, 0)
shape = SubResource("BoxShape3D_3f8aq")
disabled = true

[node name="collisionBend2" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 0.182281, 0, 0.363101)
shape = SubResource("BoxShape3D_3f8aq")
disabled = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="areaCollision" type="CollisionShape3D" parent="Area3D"]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_egdn7")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
process_mode = 3
visible = false
stream = ExtResource("3_3f8aq")
volume_db = 3.0
unit_size = 50.0
bus = &"soundEffects"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
